# chronos-mcp

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .safety-project.ini  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_INJECTION_ARCHITECTURE.md  DEPENDENCY_UPDATE_REPORT.md  LICENSE  MIGRATION.md  Makefile  README.md  README_UPDATES.md  SECURITY.md  TOOLING_MODERNIZATION_COMPLETE.md  TOOLING_SUMMARY.md  UV_MIGRATION.md  UV_SUMMARY.md  justfile  pyproject.toml  pytest.ini  run_chronos.sh  setup.py  uv.lock.backup
.claude/agents/: bulk-operations-performance.md  caldav-protocol-specialist.md  fastmcp-development.md  rrule-recurring-events.md  security-validation.md  testing-integration.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  test.yml
chronos_mcp/: __init__.py  accounts.py  bulk.py  calendars.py  config.py  credentials.py  events.py  exceptions.py  journals.py  logging_config.py  models.py  rrule.py  search.py  server.py  tasks.py  utils.py  validation.py
chronos_mcp/tools/: __init__.py  accounts.py  base.py  bulk.py  calendars.py  events.py  journals.py  tasks.py
docs/: ARCHITECTURE.md  RRULE_GUIDE.md  VTODO_VJOURNAL_GUIDE.md
examples/: advanced_features.py  basic_usage.py
scripts/: migrate_to_keyring.py  validate_chronos.py
sessions/: sessions-config.json
sessions/tasks/: m-refactor-cleanup-post-rewrite-orphans.md
sessions/tasks/done/: h-kickstart-setup.md
sessions/tasks/indexes/: caldav.md  docs.md  mcp.md  quality.md  security.md  tooling.md
src/chronos_mcp/: __main__.py  accounts.py  bulk.py  caldav_utils.py  calendars.py  config.py  credentials.py  events.py  exceptions.py  journals.py  logging_config.py  models.py  rrule.py  search.py  server.py  tasks.py  utils.py  validation.py
src/chronos_mcp/tools/: __init__.py  accounts.py  base.py  bulk.py  calendars.py  events.py  journals.py  tasks.py
tests/: conftest.py
tests/unit/: test_accounts.py  test_accounts_ssrf.py  test_base.py  test_bulk.py  test_bulk_create.py  test_bulk_delete.py  test_bulk_resource_limits.py  test_caldav_utils.py  test_calendars.py  test_config.py  test_config_validation.py  test_credentials_security.py  test_cryptography_security.py  test_events.py  test_exceptions.py  test_journals.py  test_models.py  test_race_conditions.py  test_recurring_events.py  test_rrule.py  test_search.py  test_search_advanced.py  test_server_input_validation.py  test_ssrf_protection.py  test_tasks.py  test_thread_safety.py  test_tools_journals.py  test_tools_tasks.py  test_tools_tasks_old.py  test_url_validation_security.py  test_utils.py  test_validation.py
