[project]
name = "chronos-mcp"
version = "2.0.0"
description = "A comprehensive CalDAV MCP server for calendar management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Code Developer", email = "code-developer@democratize.technology"}
]
maintainers = [
    {name = "Code Developer", email = "code-developer@democratize.technology"}
]
keywords = ["caldav", "calendar", "mcp", "fastmcp", "icalendar", "tasks", "journal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0.0",
    "caldav>=1.3.0",
    "icalendar>=5.0.0",
    "pytz>=2024.1",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "keyring>=24.0.0",
    "cryptography>=46.0.1",
]

[project.urls]
Repository = "https://github.com/democratize-technology/chronos-mcp"
Documentation = "https://github.com/democratize-technology/chronos-mcp#readme"
Issues = "https://github.com/democratize-technology/chronos-mcp/issues"
Changelog = "https://github.com/democratize-technology/chronos-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "radon>=6.0.1",
]
